# pixelforge-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gemini-dispatch.yml  gemini-review.yml  python-publish.yml  release.yml
config/: config.example.yaml
docs/: configuration.md
docs/adr/: 001-gemini-3.1-flash-image-preview.md
src/pixelforge_mcp/: config.py  server.py
src/pixelforge_mcp/templates/: prompts.yaml
src/pixelforge_mcp/utils/: api_client.py  cli.py  history.py  templates.py  transforms.py  validation.py
tests/integration/: test_integration.py  test_server.py
tests/unit/: test_api_client.py  test_cli.py  test_config.py  test_server.py  test_transforms.py  test_validation.py
